--- a/Views/Card/SavedDecks.cshtml
+++ b/Views/Card/SavedDecks.cshtml
@@ -27,6 +27,9 @@
                     <th>
                         Cards
                     </th>
+                    <th>
+                        Load
+                    </th>
                 </tr>
             </thead>
             <tbody style="text-align:center">
@@ -46,11 +49,14 @@
                                 <img src="@card.image_url" height="100">
                             }
                         </td>
+                        <td>
+                            <a class="btn btn-success m-2" style="display:flex;justify-content:center;flex-direction:column"
+                               asp-action="clearDeck" asp-controller="Card" asp-route-s="" asp-route-p="1" asp-route-deck="@deck.CardList">
+                                Load Deck
+                            </a>
+                        </td>
                     </tr>
-                    <a class="btn btn-success m-2" style="display:flex;justify-content:center;flex-direction:column" 
-                    asp-action="clearDeck" asp-controller="Card" asp-route-s="" asp-route-p="1" asp-route-deck="@deck.CardList">
-                         Load Deck
-                     </a>
+                    
                 }
             </tbody>
         </table>
