--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,10 +4,10 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to YGWeb</h1>
-    <p>This is a WIP Web Application for Yugioh Deck Building and searching
-        The Following are the current goals of the web app:
-    </p>
-    <p>- Create a user account to store and access user-specific info</p>
-    <p>- See the full Yugioh Card List and allow a search query with advanced search features</p>
-    <p>- Allow Users who have logged in to save custom decks</p>
+    <hr />
+    <h4> This a a Web Application for the popular card game Yugioh</h4>
+</div>
+<div class="row p-3 m-3 text-center" style="display:flex;justify-content:center;">
+    <img src="https://images8.alphacoders.com/120/thumb-1920-1204527.png" style="max-width: 1000px"/>
+    <h5 class="m-3"> New User? Get started by registering above!</h5>
 </div>
