--- a/Views/Card/DeckBuilder.cshtml
+++ b/Views/Card/DeckBuilder.cshtml
@@ -23,7 +23,7 @@
 
     // Use List of keywords to split the deck into main deck and extra
     List<string> extraDeckMonster = new List<string>(new string[] { "Fusion", "Synchro", "XYZ", "Link" });
-    IEnumerable<Card> mainDeck = tempCardList.Where(card => extraDeckMonster.Any(keyword => !card.type.Contains(keyword)));
+    IEnumerable<Card> mainDeck = tempCardList.Where(card => !extraDeckMonster.Any(keyword => card.type.Contains(keyword)));
     IEnumerable<Card> extraDeck = tempCardList.Where(card => extraDeckMonster.Any(keyword => card.type.Contains(keyword)));
 
     Card[] deckList = new Card[60];
